Mail templates have been modified and custom errors have been added
