# src/controllers/taskController.ts
@@ -1,9 +1,11 @@
-import { validateOrReject } from "class-validator";
 import { Request, Response } from "express";
+
+import { validateOrReject } from "class-validator";
 
 import { CreateTaskDto } from "../dto/Task/CreateTaskDto";
 import { UpdateTaskDto } from "../dto/Task/UpdateTaskDto";
 
+import CustomError from "../error/customError";
 import Task from "../models/task";
 import TaskStatus from "../models/TaskStatus";
 import User from "../models/user";
@@ -16,6 +18,13 @@ export const createTask = async (req: Request, res: Response) => {
 
     const { title, description, statusId } = dto;
 
+    const duplicateTask = await Task.findOne({ where: { title } });
+
+    if (duplicateTask) {
+      res.status(404).json({ message: "La tarea ya existe!" });
+      return;
+    }
+
     const userId = (req as any).userId;
 
     if (!userId) {
@@ -25,7 +34,7 @@ export const createTask = async (req: Request, res: Response) => {
 
     const status = await TaskStatus.findByPk(statusId);
     if (!status) {
-      res.status(404).json({ message: "Task status not found" });
+      res.status(404).json({ message: "El estado de la tarea no existe!" });
       return;
     }
 
@@ -38,16 +47,25 @@ export const createTask = async (req: Request, res: Response) => {
 
     res.status(201).json({ message: "Task created successfully", task });
   } catch (error) {
-    res.status(400).json({ errors: error });
+    throw CustomError.InternalServerError();
   }
 };
 
 export const getTasks = async (_req: Request, res: Response) => {
   try {
-    const tasks = await Task.findAll({ include: [TaskStatus, User] });
+    const userId = (_req as any).userId;
+
+    if (!userId) {
+      res.status(401).json({ message: "Unauthorized" });
+      return;
+    }
+    const tasks = await Task.findAll({
+      where: { createdBy: userId },
+      include: [TaskStatus, User],
+    });
     res.status(200).json(tasks);
   } catch (error) {
-    res.status(500).json({ message: "An error occurred while fetching tasks" });
+    throw CustomError.InternalServerError();
   }
 };
 
@@ -65,12 +83,19 @@ export const updateTask = async (req: Request, res: Response) => {
     Object.assign(dto, req.body);
     await validateOrReject(dto);
 
+    const duplicateTask = await Task.findOne({ where: { title: dto.title } });
+
+    if (duplicateTask) {
+      res.status(404).json({ message: "La tarea ya existe!" });
+      return;
+    }
+
     Object.assign(task, req.body);
     await task.save();
 
     res.status(200).json({ message: "Task updated successfully", task });
   } catch (error) {
-    res.status(400).json({ errors: error });
+    throw CustomError.InternalServerError();
   }
 };
 
@@ -87,8 +112,6 @@ export const deleteTask = async (req: Request, res: Response) => {
     await task.destroy();
     res.status(200).json({ message: "Task deleted successfully" });
   } catch (error) {
-    res
-      .status(500)
-      .json({ message: "An error occurred while deleting the task" });
+    throw CustomError.InternalServerError();
   }
 };
